--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/selbekk/<%= name %>"
+    "url": "https://github.com/<%= github %>/<%= name %>"
   },
   "license": "MIT",
   "devDependencies": {
